--- a/sample.config.json
+++ b/sample.config.json
@@ -5,6 +5,7 @@
   "accessTokenKey": "",
   "accessTokenSecret": "",
   "restletIds": {
-    "savedSearchCustomers": 0
+    "savedSearchCustomers": 0,
+    "suiteQL": 0
   }
 }
