--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "php": ">=5.6",
+    "php": "^7.2",
     "ext-json": "*",
     "eher/oauth": "^1.0",
     "guzzlehttp/guzzle": "^6.0",
