--- a/sample.config.json
+++ b/sample.config.json
@@ -7,6 +7,7 @@
   "restletIds": {
     "savedSearchCustomers": 0,
     "suiteQL": 0,
-    "createDeleteCustomer": 0
+    "createDeleteCustomer": 0,
+    "savedSearchItems": 0
   }
 }
