--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,10 @@
     {
       "name": "Nebojša Kamber",
       "email": "nebojsa.kamber@4zida.rs"
+    },
+    {
+      "name": "Danijel Šili",
+      "email": "danijel.sili@polovniautomobili.com"
     }
   ],
   "require": {
