ApiService::createSalesOrder ApiService::deleteSalesOrder

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,6 +12,7 @@
         <env name="DEPARTMENT_ID" value=""/>
         <env name="LOCATION_ID" value=""/>
         <env name="CLASSIFICATION_ID" value=""/>
+        <env name="ITEM_ID" value=""/>
     </php>
 
     <testsuites>
