--- a/sample.config.json
+++ b/sample.config.json
@@ -9,6 +9,6 @@
     "suiteQL": 0,
     "createDeleteCustomer": 0,
     "savedSearchItems": 0,
-    "salesOrder": 0
+    "createDeleteSalesOrder": 0
   }
 }
