--- a/sample.config.json
+++ b/sample.config.json
@@ -9,6 +9,8 @@
     "suiteQL": 0,
     "createDeleteCustomer": 0,
     "savedSearchItems": 0,
-    "createDeleteSalesOrder": 0
+    "createDeleteSalesOrder": 0,
+    "savedSearchGeneric": 0,
+    "createContact": 0
   }
 }
