add locations in createContact, fix sample json

--- a/sample.config.json
+++ b/sample.config.json
@@ -11,6 +11,6 @@
     "savedSearchItems": 0,
     "createDeleteSalesOrder": 0,
     "savedSearchGeneric": 0,
-    "createContact": 0
+    "createDeleteContact": 0
   }
 }
