--- a/sample.config.json
+++ b/sample.config.json
@@ -4,13 +4,13 @@
   "consumerSecret": "",
   "accessTokenKey": "",
   "accessTokenSecret": "",
-  "restletIds": {
-    "savedSearchCustomers": 0,
-    "suiteQL": 0,
+  "restletMap": {
+    "createDeleteContact": 0,
     "createDeleteCustomer": 0,
-    "savedSearchItems": 0,
     "createDeleteSalesOrder": 0,
+    "savedSearchCustomers": 0,
     "savedSearchGeneric": 0,
-    "createDeleteContact": 0
+    "savedSearchItems": 0,
+    "suiteQL": 0
   }
 }
