--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
   "require": {
     "php": ">=5.6",
     "ext-json": "*",
+    "ext-xml": "*",
+    "ext-mbstring": "*",
     "eher/oauth": "^1.0",
     "guzzlehttp/guzzle": "^6.0",
     "doctrine/annotations": "^1.4",
