--- a/sample.config.json
+++ b/sample.config.json
@@ -12,6 +12,7 @@
     "savedSearchCustomers": 0,
     "savedSearchGeneric": 0,
     "savedSearchItems": 0,
+    "downloadPdf": 0,
     "suiteQL": 0
   }
 }
