Ported https://github.com/nebkam/netsuite-restlet-php-sdk/commit/46cda981cf272571a94443a22f7838f7f0faa44f

--- a/sample.config.json
+++ b/sample.config.json
@@ -8,6 +8,7 @@
     "createDeleteContact": 0,
     "createDeleteCustomer": 0,
     "createDeleteSalesOrder": 0,
+    "downloadPdf": 0,
     "savedSearchCustomers": 0,
     "savedSearchGeneric": 0,
     "savedSearchItems": 0,
