--- a/sample.config.json
+++ b/sample.config.json
@@ -9,6 +9,7 @@
     "createDeleteCustomer": 0,
     "createDeleteSalesOrder": 0,
     "downloadPdf": 0,
+    "getSalesOrder": 0,
     "savedSearchCustomers": 0,
     "savedSearchGeneric": 0,
     "savedSearchItems": 0,
