--- a/sample.config.json
+++ b/sample.config.json
@@ -13,6 +13,7 @@
     "savedSearchGeneric": 0,
     "savedSearchItems": 0,
     "downloadPdf": 0,
+    "salesOrderMetaData": 0,
     "suiteQL": 0
   }
 }
