--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,14 @@
     {
       "name": "Danijel Šili",
       "email": "danijel.sili@polovniautomobili.com"
+    },
+    {
+      "name": "Silvester Kokai",
+      "email": "silvester.kokai@infostud.com"
+    },
+    {
+      "name": "Vojislav Zelić",
+      "email": "vojislav.zelic@infostud.com"
     }
   ],
   "require": {
