--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     "phpdocumentor/reflection-docblock": ">=4.3",
     "symfony/property-info": "^3.4 || ^4.2",
     "symfony/property-access": "^3.4 || ^4.2",
-    "symfony/serializer": "^3.4 || ^4.2"
+    "symfony/serializer": "^3.4 || ^4.2",
+    "psr/log": "^1.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.7"
