--- a/composer.json
+++ b/composer.json
@@ -28,9 +28,9 @@
     "guzzlehttp/guzzle": "^6.0 || ^7.0",
     "doctrine/annotations": "^1.4",
     "phpdocumentor/reflection-docblock": ">=4.3",
-    "symfony/property-info": "^3.4 || ^4.2",
-    "symfony/property-access": "^3.4 || ^4.2",
-    "symfony/serializer": "^3.4 || ^4.2",
+    "symfony/property-info": "^3.4 || ^4.2 || ^5.2",
+    "symfony/property-access": "^3.4 || ^4.2 || ^5.2",
+    "symfony/serializer": "^3.4 || ^4.2 || ^5.2",
     "psr/log": "^1.1"
   },
   "require-dev": {
