Added getPayments to the ApiService, corresponding tests, updated the sample.config.json with the new script

--- a/sample.config.json
+++ b/sample.config.json
@@ -45,6 +45,10 @@
     "suiteQL": {
       "script": 0,
       "deploy": 1
+    },
+    "getPayments": {
+      "script": 0,
+      "deploy": 1
     }
   }
 }
