Backport ApiService::getOldCrmPayments Closes #33

--- a/sample.config.json
+++ b/sample.config.json
@@ -30,6 +30,10 @@
       "script": 0,
       "deploy": 1
     },
+    "getOldCrmPayments": {
+      "script": 0,
+      "deploy": 1
+    },
     "savedSearchCustomers": {
       "script": 0,
       "deploy": 1
